@@ -11,6 +11,7 @@ OpenLDAP 2.4.41 Engineering
 	Fixed slapd syncrepl mutex for cookie state (ITS#7968)
 	Fixed slapd syncrepl memory leaks (ITS#8035)
 	Fixed slapd syncrepl to free presentlist at end of refresh mode (ITS#8038)
+	Fixed slapd syncrepl to streamline presentlist (ITS#8042)
 	Fixed slapd-mdb one-level search (ITS#7975)
 	Fixed slapd-mdb heap corruption (ITS#7965)
 	Fixed slapd-mdb crash after deleting in-use schema (ITS#7995)
